<resources>
    <string name="app_name">Notes</string>

    <!--    Menu main activity-->
    <string name="title_btn_add">Add</string>
    <string name="desc_btn_add">Button for adding new note</string>
    <string name="title_btn_edit">Edit</string>
    <string name="desc_btn_edit">Button to edit notes</string>
    <string name="title_btn_search">Search</string>
    <string name="desc_btn_search">Button to search in notes</string>

    <!--    Menu add note-->
    <string name="title_btn_done">Done</string>
    <string name="desc_btn_done">Button to save note</string>
    <string name="title_btn_delete">Delete</string>
    <string name="desc_btn_delete">Button to delete note</string>
    <string name="title_btn_color">Color</string>
    <string name="desc_btn_color">Button to change color</string>

    <!--    EditText hints-->
    <string name="et_title_hint">Input Title</string>
    <string name="et_content_hint">Start typing here…</string>

    <!--    Bottom navigation-->
    <string name="str_title_notes">Notes</string>
    <string name="str_title_categories">Categories</string>
    <string name="str_title_favorites">Favorite</string>
    <string name="str_title_settings">Settings</string>
    <string name="str_desc_notes">Home page with notes</string>
    <string name="str_desc_categories">Categories screen</string>
    <string name="str_desc_favorites">Favorites screen</string>
    <string name="str_desc_settings">Settings screen</string>
    <string name="str_desc_tab_layout_categories">Tab layout for categories</string>

    <string name="desc_fab_add_note">Add new note button</string>
    <string name="title_btn_favorite">Add to Favorites</string>
    <string name="desc_btn_favorite">Add to favorites</string>

    <string name="desc_btn_add_category">Add new category button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //    <!--    Settings-->
    <!--    <string name="appearance_settings_title">Appearance Settings</string>-->
    <!--    <string name="appearance_settings_desc">Customize the appearance of the app.</string>-->
    <!--    <string name="theme_preference_title">Theme</string>-->
    <!--    <string name="theme_preference_summary">Choose a theme for the app.</string>-->
    <!--    <string name="theme_preference_key">theme_preference_key</string>-->
    <!--    <string name="theme_default_value">default</string>-->
    <!--    <string name="font_style_preference_key">font_style_preference</string>-->
    <!--    <string name="font_style_preference_title">Font Style</string>-->
    <!--    <string name="font_style_preference_summary">Choose a font style for the app.</string>-->
    <!--    <string name="text_size_preference">Text Size</string>-->
    <!--    <string name="text_size_preference_summary">Adjust the default text size for notes.</string>-->
    <!--    <string name="text_size_preference_key">text_size_preference_key</string>-->
    <!--    <string name="default_color_preference">Default Note Color</string>-->
    <!--    <string name="default_color_preference_summary">Choose a default color for new notes.</string>-->
    <!--    <string name="default_color_preference_key">default_color_preference_key</string>-->
    <!--    <string name="default_category_preference">Default Category</string>-->
    <!--    <string name="default_category_preference_summary">Set a default category for new notes.</string>-->
    <!--    <string name="default_category_preference_key">default_category_preference_key</string>-->
    <!--    <string name="sort_order_preference">Sort Order</string>-->
    <!--    <string name="sort_order_preference_summary">Choose how to sort your notes.</string>-->
    <!--    <string name="sort_order_preference_key">sort_order_preference_key</string>-->
    <!--    <string name="sort_order_preference_default">default</string>-->
    <!--    <string name="sort_order_preference_ascending">Ascending</string>-->
    <!--    <string name="sort_order_preference_descending">Descending</string>-->
    <!--    <string name="sort_order_preference_alphabetical">Alphabetical</string>-->
    <!--    <string name="sort_order_preference_recent">Most Recent</string>-->
    <!--    <string name="sort_order_preference_oldest">Oldest First</string>-->
    <!--    <string name="sort_order_preference_custom">Custom</string>-->
    <!--    <string name="sort_order_preference_custom_summary">Sort notes in a custom order.</string>-->
    <!--    <string name="sort_order_preference_custom_key">sort_order_preference_custom_key</string>-->
    <!--    <string name="sort_order_preference_custom_default">default</string>-->
    <!--    <string name="sort_order_preference_custom_ascending">Ascending</string>-->
    <!--    <string name="sort_order_preference_custom_descending">Descending</string>-->
    <!--    <string name="sort_order_preference_custom_alphabetical">Alphabetical</string>-->
    <!--    <string name="sort_order_preference_custom_recent">Most Recent</string>-->
    <!--    <string name="sort_order_preference_custom_oldest">Oldest First</string>-->
    <!--    <string name="sort_order_preference_custom_custom">Custom</string>-->
    <!-- Preference Titles -->
    <!--    <string name="messages_header">Messages</string>-->
    <!--    <string name="sync_header">Sync</string>-->

    <!-- Messages Preferences -->
    <!--    <string name="signature_title">Your signature</string>-->
    <!--    <string name="reply_title">Default reply action</string>-->

    <!-- Sync Preferences -->
    <!--    <string name="sync_title">Sync email periodically</string>-->
    <!--    <string name="attachment_title">Download incoming attachments</string>-->
    <!--    <string name="attachment_summary_on">Automatically download attachments for incoming emails-->
    <!--    </string>-->
    <!--    <string name="attachment_summary_off">Only download attachments when manually requested</string>-->
    <!--     TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

</resources>