<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:contentDescription="@string/str_desc_notes"
        android:icon="@drawable/outline_home_24"
        android:title="@string/str_title_notes" />

    <item
        android:id="@+id/nav_categories"
        android:contentDescription="@string/str_desc_categories"
        android:icon="@drawable/outline_category_24"
        android:title="@string/str_title_categories" />

    <item
        android:id="@+id/nav_favorites"
        android:contentDescription="@string/str_desc_favorites"
        android:icon="@drawable/outline_favorite_border_24"
        android:title="@string/str_title_favorites" />

    <item
        android:id="@+id/nav_settings"
        android:contentDescription="@string/str_desc_settings"
        android:icon="@drawable/outline_settings_24"
        android:title="@string/str_title_settings" />

</menu>